--- a/Restaurang.css
+++ b/Restaurang.css
@@ -13,12 +13,6 @@ body {
   background-color: #BBCFD4;
 }
 
-p {
-  text-align: center;
-  font-size: 20px;
-  margin-top: 20px;
-}
-
 * {
   padding: 0;
   margin: 0;
@@ -27,11 +21,20 @@ p {
 h1 {
   color: black;
   text-align: center;
-  padding-top: 16px;
+  padding-top: 12px;
+  font-family: 'Spectral SC', serif;
+  font-size: 35px;
+}
+
+h4 {
+  color: black;
+  text-align: center;
+  font-family: 'Spectral SC', serif;
+  font-weight: light;
 }
 
 h2 {
-  font-size: 23px;
+  font-size: 26px;
   text-align: center;
 }
 
@@ -91,7 +94,7 @@ ul {
   padding: 0;
   margin: 0;
   height: 50px;
-  font-family: cursive;
+  font-family: 'Spectral SC', serif;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -110,9 +113,10 @@ li a {
   display: block;
   color: #2B3B40;
   text-align: center;
-  padding-top:10px;
-  padding-bottom: 7px;
+  padding-top:7px;
+  padding-bottom: 2px;
   text-decoration: none;
+
 }
 
 li a:hover {
@@ -144,11 +148,11 @@ footer {
   margin-top: 30px;
   margin-bottom: 20px;
   font-weight: bold;
-  font-family: cursive;
+  font-family: 'Spectral SC', serif;
 }
 
 #Container {
-	width: auto;
+	width: 81.55%;
   margin: auto;
   text-align: center;
 }
@@ -158,202 +162,62 @@ footer {
     border: 2px solid;
     border-radius: 10px;
     display:inline-block;
-    width:1100px;
     text-align:center;
     font-family: cursive;
     height:80px;
     margin-top: 35px;
     margin-bottom: 30px;
+    width: 100%;
 }
 
-#Grillen {
-    background-color:#BBCFD4;
-    display:inline-block;
-    width:1140px;
-    text-align:left;
-    font-family: cursive;
-    height:10px;
-    margin-top: 10px;
-    margin-left: 50px;
+.rätt{
+  width: 32.7%;
+  background-color:#BBCFD4;
+  border: 2px solid;
+  border-radius: 10px;
+  display:inline-block;
+  text-align:center;
+  font-family: cursive;
+  height:auto;
+  margin-top: 8px;
+  padding-bottom: 10px;
 }
 
-#Halloumiburgare {
-    background-color:#BBCFD4;
-    border: 2px solid;
-    border-radius: 10px;
-    display:inline-block;
-    width:360px;
-    text-align:center;
-    font-family: cursive;
-    height:105px;
-    margin-top: 8px;
-}
-
-#Plankstek {
-    background-color:#BBCFD4;
-    border: 2px solid;
-    border-radius: 10px;
-    display:inline-block;
-    width:360px;
-    text-align:center;
-    font-family: cursive;
-    height:105px;
-    margin-top: 8px;
-}
-
-#Entrecote {
-    background-color:#BBCFD4;
-    border: 2px solid;
-    border-radius: 10px;
-    display:inline-block;
-    width:360px;
-    text-align:center;
-    font-family: cursive;
-    height:105px;
-    margin-top: 8px;
-}
-
-#Fisk {
+.huvudrätt{
+  width: 100%;
   background-color:#BBCFD4;
   display:inline-block;
-  width:1140px;
   text-align:left;
-  font-family: cursive;
+font-family: 'Spectral SC', serif;
   height:10px;
   margin-top: 20px;
-  margin-left: 50px;
-
+  margin-left: 0px;
 }
 
-#Laxtallrik {
-    background-color:#BBCFD4;
-    border: 2px solid;
-    border-radius: 10px;
-    display:inline-block;
-    width:360px;
-    text-align:center;
-    font-family: cursive;
-    height:105px;
-    margin-top: 8px;
-}
-
-#Rödtunga {
-    background-color:#BBCFD4;
-    border: 2px solid;
-    border-radius: 10px;
-    display:inline-block;
-    width:360px;
-    text-align:center;
-    font-family: cursive;
-    height:105px;
-    margin-top: 8px;
-}
-
-#Hummersoppa {
-    background-color:#BBCFD4;
-    border: 2px solid;
-    border-radius: 10px;
-    display:inline-block;
-    width:360px;
-    text-align:center;
-    font-family: cursive;
-    height:105px;
-    margin-top: 8px;
-}
-
-#Sallad {
-    background-color:#BBCFD4;
-    display:inline-block;
-    text-align:left;
-    width:1140px;
-    font-family: cursive;
-    height:10px;
-    margin-top: 20px;
-    margin-left: 50px;
-}
-
-#Ceasarsallad {
-    background-color:#BBCFD4;
-    border: 2px solid;
-    border-radius: 10px;
-    display:inline-block;
-    width:360px;
-    text-align:center;
-    font-family: cursive;
-    height:105px;
-    margin-top: 8px;
-}
-
-#Räksallad {
-    background-color:#BBCFD4;
-    border: 2px solid;
-    border-radius: 10px;
-    display:inline-block;
-    width:360px;
-    text-align:center;
-    font-family: cursive;
-    height:105px;
-    margin-top: 8px;
-}
-
-#Romansallad {
-    background-color:#BBCFD4;
-    border: 2px solid;
-    border-radius: 10px;
-    display:inline-block;
-    width:360px;
-    text-align:center;
-    font-family: cursive;
-    height:105px;
-    margin-top: 8px;
-}
-
-#Barnmeny {
+.barnrätt{
+  width: 49.1%;
   background-color:#BBCFD4;
-  display:inline-block;
-  width:1140px;
-  text-align:left;
+  border: 2px solid;
+  border-radius: 10px;
+  display: inline-block;
+  text-align: center;
   font-family: cursive;
-  height:10px;
-  margin-top: 20px;
-  margin-left: 50px;
+  height: auto;
+  margin-top: 8px;
+  padding-bottom: 10px;
 }
 
-#Fiskchips {
-    background-color:#BBCFD4;
-    border: 2px solid;
-    border-radius: 10px;
-    display:inline-block;
-    width:540px;
-    text-align:center;
-    font-family: cursive;
-    height:105px;
-    margin-top: 8px;
-}
-
-#Pannkakor {
-    background-color:#BBCFD4;
-    border: 2px solid;
-    border-radius: 10px;
-    display: inline-block;
-    width: 540px;
-    text-align: center;
-    font-family: cursive;
-    height: 105px;
-    margin-top: 8px;
-}
-
-
-#Drycker {
-    background-color:#BBCFD4;
-    border: 2px solid;
-    border-radius: 10px;
-    display:inline-block;
-    width:770px;
-    text-align:center;
-    font-family:cursive;
-    height:380px;
-    margin-top: 25px;
+.drycker{
+  width: 40%;
+  background-color:#BBCFD4;
+  border: 2px solid;
+  border-radius: 10px;
+  display:inline-block;
+  text-align:center;
+  font-family:cursive;
+  height:auto;
+  margin-top: 25px;
+  padding-bottom: 10px;
 }
 
 #Kontakta {
@@ -466,42 +330,9 @@ footer {
     margin-right: 50px;
 }
 
-/*#Jobböppet {
-
-	width:50%;
-  margin: auto;
-  text-align: center;
-  flex-direction: column;
-  align-self: flex-start;
-  height: 336px;
-}*/
-/*
-#Öppettider {
-    background-color:#BBCFD4;
-    border: 2px solid;
-    border-radius: 10px;
-    width: 50%;
-    text-align:center;
-    font-family:cursive;
-    height:168px;
-    margin-top: 35px;
-}
-
-#Jobbhososs {
-    background-color:#BBCFD4;
-    border: 2px solid;
-    border-radius: 10px;
-    display:inline-block;
-    width: 50%;
-    text-align:center;
-    font-family:cursive;
-    height:168px;
-    margin-top: 2px;
-}*/
-
 h3 {
   text-align: center;
-  font-family: cursive;
+  font-family: 'Spectral SC', serif;
   text-decoration: none;
   margin-left: 40px;
   margin-right: 40px;
@@ -512,8 +343,8 @@ h3 {
 
 h6 {
   text-align: center;
-  font-family: cursive;
-  font-size: 20px;
+font-family: 'Spectral SC', serif;
+  font-size: 22px;
   padding: 10px;
   text-decoration: none;
 }
@@ -529,7 +360,7 @@ p7 {
 
 P {
   font-size: 15px;
-  font-family: cursive;
+  font-family: 'Roboto', sans-serif;
   margin-top: 0px;
   padding-top: 5px;
   font-weight: bold;
@@ -538,15 +369,15 @@ P {
 
 P2 {
   font-size: 15px;
-  font-family: cursive;
+  font-family: 'Roboto', sans-serif;
   margin-top: 0px;
   font-weight: bold;
   text-align: center;
 }
 
 p5 {
-  font-size: 20px;
-  font-family: cursive;
+  font-size: 24px;
+  font-family: 'Spectral SC', serif;
   margin-top: 0px;
   margin-left: 15px;
   padding-top: 5px;
@@ -555,8 +386,8 @@ p5 {
 }
 
 p6 {
-  font-size: 15px;
-  font-family: cursive;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
   margin-top: 0px;
   padding-top: 5px;
   font-weight: bold;
@@ -565,15 +396,69 @@ p6 {
 
 p4 {
   font-size: 30px;
-  font-family: cursive;
+  font-family: 'Spectral SC', serif;
   margin-top: 40px;
   margin-left: 15px;
   padding-top: 40px;
-  font-weight: bold;
+  font-weight: regular;
   text-align: center;
 }
 
+@media screen and (max-width: 1287px) {
+
+  .huvudrätt{
+    width: 100%;
+    background-color:#BBCFD4;
+    text-align:center;
+    font-family: cursive;
+    height:10px;
+    margin-top: 20px;
+    margin-left: 0px;
+}
+
+@media screen and (max-width: 1210px) {
+
+  .rätt{
+    width: 100%;
+    background-color:#BBCFD4;
+    border: 2px solid;
+    border-radius: 10px;
+    text-align:center;
+    font-family: cursive;
+    height:auto;
+    margin-top: 8px;
+    padding-bottom: 10px;
+  }
+
+  .huvudrätt{
+    width: 100%;
+    background-color:#BBCFD4;
+    text-align:center;
+  font-family: 'Spectral SC', serif;
+    height:10px;
+    margin-top: 20px;
+    margin-left: 0px;
+  }
+
+  .barnrätt{
+    width: 100%;
+    background-color:#BBCFD4;
+    border: 2px solid;
+    border-radius: 10px;
+    text-align: center;
+    font-family: cursive;
+    height: auto;
+    margin-top: 8px;
+    padding-bottom: 10px;
+  }
+
 @media screen and (max-width: 700px) {
+
+
+section{
+width:100%;
+}
+
     html {
       -webkit-text-size-adjust: none;
     }
@@ -582,7 +467,6 @@ p4 {
       width: 100%;
       font-size: auto;
     }
-
 
     ul {
       flex-direction: column;
@@ -603,18 +487,18 @@ p4 {
       width: 100%;
       display: block;
       text-align: center;
-      font-size: 80%;
+      font-size: 100%;
       flex-shrink: 1;
       flex-grow: 1;
       flex-basis: auto;
     }
 
     p4 {
-      font-family: cursive;
+
       margin-top: 40px;
       margin-left: auto;
       padding-top: 40px;
-      font-weight: bold;
+      font-weight: regular;
       text-align: center;
       font-size: 25px;
     }
@@ -624,7 +508,7 @@ p4 {
     }
 
     h2 {
-      font-size: 23px;
+      font-size: 15px;
       text-align: center;
     }
 
@@ -645,7 +529,7 @@ p4 {
         text-align:center;
         font-family: cursive;
         height:10px;
-        margin-top: 10px;
+        margin-top: 60px;
         margin-left: 50px;
         margin-right: 50px;
         margin-bottom: 100px;
@@ -653,7 +537,6 @@ p4 {
 
     h3 {
       text-align: center;
-      font-family: cursive;
       text-decoration: none;
       margin-left: 40px;
       margin-right: 40px;
@@ -694,10 +577,6 @@ p4 {
       height: 100%;
     }
 
-    p {
-      text-align: center;
-    }
-
     #Info {
       margin-left: auto;
       margin-right: auto;
@@ -713,3 +592,4 @@ p4 {
       grid-template-areas: "inforestaurang"
                            "öppettider"
                            "jobbhososs"
+}
