--- a/Restaurang.css
+++ b/Restaurang.css
@@ -36,6 +36,7 @@ h4 {
 h2 {
   font-size: 26px;
   text-align: center;
+
 }
 
 a:link {
@@ -103,6 +104,7 @@ ul {
   overflow: hidden;
   width: 100%;
   background-color: #2B3B40;
+
 }
 
 li {
@@ -316,6 +318,7 @@ font-family: 'Spectral SC', serif;
 	width:100%;
   margin: auto;
   text-align: center;
+
 }
 
 #Rubrik {
@@ -375,7 +378,7 @@ P2 {
   text-align: center;
 }
 
-p5 {
+h5 {
   font-size: 24px;
   font-family: 'Spectral SC', serif;
   margin-top: 0px;
@@ -415,6 +418,20 @@ p4 {
     margin-top: 20px;
     margin-left: 0px;
 }
+
+@media screen and (max-width: 1286px) {
+
+  h5 {
+    font-size: 24px;
+    font-family: 'Spectral SC', serif;
+    margin-top: 0px;
+    margin-left: 15px;
+    padding-top: 5px;
+    font-weight: bold;
+    text-align: center;
+  }
+}
+
 
 @media screen and (max-width: 1210px) {
 
@@ -520,6 +537,10 @@ width:100%;
     	width:100%;
       margin: auto;
       text-align: center;
+      margin-top: 60px;
+      margin-left: 50px;
+      margin-right: 50px;
+      margin-bottom: 100px;
     }
 
     #Rubrik {
@@ -527,7 +548,6 @@ width:100%;
         display:inline-block;
         width:auto;
         text-align:center;
-        font-family: cursive;
         height:10px;
         margin-top: 60px;
         margin-left: 50px;
