--- a/Restaurang.css
+++ b/Restaurang.css
@@ -4,7 +4,6 @@ header {
   width: 100%;
   background: #BBCFD4;
   font-family: cursive;
-  font-size: auto;
   margin-top: 0px;
   padding: 0px;
 }
@@ -18,6 +17,7 @@ body {
   margin: 0;
 }
 
+
 h1 {
   color: black;
   text-align: center;
@@ -30,15 +30,12 @@ h4 {
   color: black;
   text-align: center;
   font-family: 'Spectral SC', serif;
-  font-weight: light;
 }
 
 h2 {
   font-size: 26px;
   text-align: center;
-
 }
-
 a:link {
   color: black;
   text-decoration: none;
@@ -50,7 +47,7 @@ a:visited {
 }
 
 a:hover {
-  color: black;
+  color:black;
   text-decoration: underline;
 }
 
@@ -58,15 +55,34 @@ a:active {
   color: black;
   text-decoration: underline BLACK;
 }
+li a:link {
+  color: white;
+  text-decoration: none;
+}
+
+li a:visited {
+  color: white;
+  text-decoration:none;
+}
+
+li a:hover {
+  color: white;
+  text-decoration: underline;
+}
+
+li a:active {
+  color: white;
+  text-decoration: underline white;
+}
 
 h2 > a {
   position: relative;
-  color: #000;
+  color: white;
   text-decoration: none;
 }
 
 h2 > a:hover {
-  color: #000;
+  color: white;
 }
 
 h2 > a:before {
@@ -96,6 +112,7 @@ ul {
   margin: 0;
   height: 50px;
   font-family: 'Spectral SC', serif;
+  color:white;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -104,11 +121,6 @@ ul {
   overflow: hidden;
   width: 100%;
   background-color: #2B3B40;
-
-}
-
-li {
-  float:left;
 }
 
 li a {
@@ -118,11 +130,13 @@ li a {
   padding-top:7px;
   padding-bottom: 2px;
   text-decoration: none;
+  color: white;
 
 }
 
 li a:hover {
   background-color: #616B6E;
+  color: white;
 }
 
 #Wrapper {
@@ -318,7 +332,6 @@ font-family: 'Spectral SC', serif;
 	width:100%;
   margin: auto;
   text-align: center;
-
 }
 
 #Rubrik {
@@ -370,7 +383,7 @@ P {
   text-align: center;
 }
 
-P2 {
+.P2 {
   font-size: 15px;
   font-family: 'Roboto', sans-serif;
   margin-top: 0px;
@@ -378,7 +391,7 @@ P2 {
   text-align: center;
 }
 
-h5 {
+.p5 {
   font-size: 24px;
   font-family: 'Spectral SC', serif;
   margin-top: 0px;
@@ -388,7 +401,7 @@ h5 {
   text-align: left;
 }
 
-p6 {
+.p6 {
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
   margin-top: 0px;
@@ -397,13 +410,12 @@ p6 {
   text-align: center;
 }
 
-p4 {
+.p4 {
   font-size: 30px;
   font-family: 'Spectral SC', serif;
-  margin-top: 40px;
+  margin-top: 5px;
   margin-left: 15px;
-  padding-top: 40px;
-  font-weight: regular;
+  padding-top: 5px;
   text-align: center;
 }
 
@@ -419,29 +431,19 @@ p4 {
     margin-left: 0px;
 }
 
-@media screen and (max-width: 1286px) {
-
-  h5 {
-    font-size: 24px;
-    font-family: 'Spectral SC', serif;
-    margin-top: 0px;
-    margin-left: 15px;
-    padding-top: 5px;
-    font-weight: bold;
+  .p5{
     text-align: center;
-  }
 }
-
+}
 
 @media screen and (max-width: 1210px) {
 
-  .rätt{
+  .rätt {
     width: 100%;
     background-color:#BBCFD4;
     border: 2px solid;
     border-radius: 10px;
     text-align:center;
-    font-family: cursive;
     height:auto;
     margin-top: 8px;
     padding-bottom: 10px;
@@ -496,10 +498,6 @@ width:100%;
       align-items: center;
     }
 
-    li {
-      float: none;
-    }
-
     li  a {
       width: 100%;
       display: block;
@@ -510,24 +508,25 @@ width:100%;
       flex-basis: auto;
     }
 
-    p4 {
+    .p4 {
 
-      margin-top: 40px;
+      margin-top: 5px;
       margin-left: auto;
-      padding-top: 40px;
+      padding-top: 5px;
       font-weight: regular;
       text-align: center;
       font-size: 25px;
     }
 
     h1 {
-      font-size: 20px;
+      font-size: 30px;
     }
 
     h2 {
       font-size: 15px;
       text-align: center;
     }
+
 
     h4 {
       font-size: 15px;
@@ -537,17 +536,13 @@ width:100%;
     	width:100%;
       margin: auto;
       text-align: center;
-      margin-top: 60px;
-      margin-left: 50px;
-      margin-right: 50px;
-      margin-bottom: 100px;
     }
 
     #Rubrik {
-        background-color:#BBCFD4;
-        display:inline-block;
+        background-color:#BBCFD4
         width:auto;
         text-align:center;
+        font-family: cursive;
         height:10px;
         margin-top: 60px;
         margin-left: 50px;
@@ -613,3 +608,10 @@ width:100%;
                            "öppettider"
                            "jobbhososs"
 }
+
+@media screen and (max-width: 420px) {
+
+    h1 {
+      font-size: 20px;
+    }
+  }
